--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,41 @@
     tools:context="com.datalabor.soporte.manhattan.MainActivity">
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout8"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_height="160dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        app:layout_constraintHorizontal_bias="0.473"
+        android:background="@drawable/wood1"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/black"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <ImageView
-                android:id="@+id/imageButton5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:adjustViewBounds="false"
-                android:background="@android:color/transparent"
-                android:contentDescription=""
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/button_account"
-                tools:ignore="NestedWeights" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/button_account" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:paddingEnd="10dp"
             android:orientation="vertical">
 
             <ImageButton
@@ -55,6 +50,8 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
+                android:onClick="showPuntos"
+                android:paddingTop="10dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/button_points" />
 
@@ -64,6 +61,8 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
+                android:onClick="showCompras"
+                android:paddingTop="10dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/button_shopping" />
 
@@ -73,29 +72,29 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
+                android:onClick="showPerfil"
+                android:paddingTop="10dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/buttton_perfil" />
 
+
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout11"
         android:layout_width="0dp"
         android:layout_height="260dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
-        app:layout_constraintVertical_bias="0.068">
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
         <LinearLayout
             android:id="@+id/linearLayout7"
@@ -203,6 +202,62 @@
                 app:srcCompat="@drawable/button_news" />
 
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <ImageButton
+            android:id="@+id/imageView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:onClick="showFacebookPage"
+            android:padding="2dp"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/facebook_icon" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:padding="2dp"
+            app:srcCompat="@drawable/instragram_icon" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:padding="2dp"
+            app:srcCompat="@drawable/mail_icon" />
+
+        <ImageButton
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:onClick="callManhattan"
+            android:padding="2dp"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/phone_icon" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
