--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="manhattan">#822882</color>
     <color name="blue1">#21C4F7</color>
+    <color name="amarillo1">#FFD800</color>
 
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
@@ -23,5 +24,6 @@
     <color name="textInverse">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="divider">#aaa</color>
+
 
 </resources>
